--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "dev": "vite",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "server": "bun run server/index.ts",
+    "dev:server": "bun --watch server/index.ts"
   },
   "dependencies": {
     "clsx": "^2.1.1",
@@ -16,7 +18,15 @@
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-router-dom": "^7.11.0",
-    "tailwind-merge": "^3.4.0"
+    "tailwind-merge": "^3.4.0",
+    "@elysiajs/cors": "^1.4.0",
+    "@langchain/community": "^1.1.1",
+    "@langchain/core": "^1.1.8",
+    "@langchain/textsplitters": "^1.0.1",
+    "@xenova/transformers": "^2.17.2",
+    "elysia": "^1.4.19",
+    "pdf-parse": "^2.4.5",
+    "groq-sdk": "^0.3.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
