--- a/package.json
+++ b/package.json
@@ -12,25 +12,26 @@
     "dev:server": "bun --watch server/index.ts"
   },
   "dependencies": {
-    "clsx": "^2.1.1",
-    "framer-motion": "^12.23.26",
-    "lucide-react": "^0.562.0",
-    "react": "^19.2.0",
-    "react-dom": "^19.2.0",
-    "react-router-dom": "^7.11.0",
-    "tailwind-merge": "^3.4.0",
     "@elysiajs/cors": "^1.4.0",
     "@langchain/community": "^1.1.1",
     "@langchain/core": "^1.1.8",
     "@langchain/textsplitters": "^1.0.1",
     "@xenova/transformers": "^2.17.2",
+    "clsx": "^2.1.1",
     "elysia": "^1.4.19",
+    "framer-motion": "^12.23.26",
+    "groq-sdk": "^0.3.3",
+    "lucide-react": "^0.562.0",
     "pdf-parse": "^2.4.5",
-    "groq-sdk": "^0.3.3"
+    "react": "^19.2.0",
+    "react-dom": "^19.2.0",
+    "react-router-dom": "^7.11.0",
+    "tailwind-merge": "^3.4.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
     "@tailwindcss/postcss": "^4.1.18",
+    "@types/bun": "^1.3.5",
     "@types/node": "^24.10.1",
     "@types/react": "^19.2.5",
     "@types/react-dom": "^19.2.3",
