--- a/package.json
+++ b/package.json
@@ -46,5 +46,10 @@
     "typescript": "~5.9.3",
     "typescript-eslint": "^8.46.4",
     "vite": "^7.2.4"
+  },
+  "overrides": {
+    "@langchain/community": {
+      "pdf-parse": "$pdf-parse"
+    }
   }
 }
