--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@langchain/community": "^1.1.1",
     "@langchain/core": "^1.1.8",
     "@langchain/textsplitters": "^1.0.1",
+    "@sinclair/typebox": "^0.34.45",
     "@xenova/transformers": "^2.17.2",
     "clsx": "^2.1.1",
     "elysia": "^1.4.19",
@@ -46,10 +47,5 @@
     "typescript": "~5.9.3",
     "typescript-eslint": "^8.46.4",
     "vite": "^7.2.4"
-  },
-  "overrides": {
-    "@langchain/community": {
-      "pdf-parse": "$pdf-parse"
-    }
   }
 }
